# vc-core

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md
crates/vc_cfg/: Cargo.toml
crates/vc_cfg/src/: lib.rs
crates/vc_ecs/: Cargo.toml  README.md
crates/vc_ecs/derive/: Cargo.toml
crates/vc_ecs/derive/src/: bundle.rs  component.rs  lib.rs  path.rs  resource.rs  schedule.rs
crates/vc_ecs/src/: __macro_exports.rs  borrow.rs  change_detection.rs  clone.rs  error.rs  intern.rs  label.rs  lib.rs  name.rs  tick.rs
crates/vc_ecs/src/archetype/: arches.rs  archetype.rs  archetypes.rs  bundle.rs  entity.rs  id.rs  ident.rs  info.rs  mod.rs
crates/vc_ecs/src/bundle/: bundle.rs  ident.rs  impls.rs  info.rs  insert.rs  mod.rs  remove.rs  spawn.rs
crates/vc_ecs/src/command/: commands.rs  entity.rs  mod.rs  object.rs  queue.rs
crates/vc_ecs/src/component/: clone.rs  components.rs  id.rs  ident.rs  impls.rs  info.rs  mod.rs  register.rs  required.rs  storage.rs  tick.rs  tools.rs
crates/vc_ecs/src/entity/: allocator.rs  clone.rs  entities.rs  entity.rs  error.rs  ident.rs  info.rs  mapper.rs  mod.rs  remote_allocator.rs  storage.rs
crates/vc_ecs/src/error/: command.rs  context.rs  ecs.rs  ecs_error.rs  handler.rs  mod.rs
crates/vc_ecs/src/event/: event.rs  mod.rs  observer.rs  trigger.rs
crates/vc_ecs/src/lifecycle/: event.rs
crates/vc_ecs/src/marker/: mod.rs
crates/vc_ecs/src/query/: access.rs  data.rs  impls.rs  iter.rs  mod.rs  query.rs  state.rs
crates/vc_ecs/src/query/data/: comp_mut.rs  comp_raw.rs  comp_ref.rs  entity.rs  mod.rs  tuples.rs
crates/vc_ecs/src/query/filter/: added.rs  and.rs  changed.rs  mod.rs  or.rs  with.rs  without.rs
crates/vc_ecs/src/query/state/: mod.rs
crates/vc_ecs/src/resource/: ident.rs  impls.rs  info.rs  mod.rs  resources.rs
crates/vc_ecs/src/schedule/: dag.rs  graph.rs  label.rs  mod.rs  schedule.rs  schedules.rs  system.rs  tarjan_scc.rs
crates/vc_ecs/src/schedule/executor/: mod.rs  multi.rs  single.rs
crates/vc_ecs/src/schedule/graph/: dag.rs  graphs.rs  mod.rs  reduction.rs  scc.rs  toposort.rs
crates/vc_ecs/src/storage/: blob_array.rs  blob_box.rs  column.rs  impls.rs  indices.rs  mod.rs  storages.rs  tick_array.rs  utils.rs
crates/vc_ecs/src/storage/column/: blob_array.rs  mod.rs  tick_array.rs
crates/vc_ecs/src/storage/dense/: ident.rs  mod.rs  table.rs  tables.rs
crates/vc_ecs/src/storage/global/: data.rs  mod.rs  set.rs
crates/vc_ecs/src/storage/resource/: data.rs  mod.rs  resources.rs
crates/vc_ecs/src/storage/sparse/: data.rs  ident.rs  map.rs  maps.rs  mod.rs  set.rs  sets.rs  sparse_component.rs
crates/vc_ecs/src/storage/table/: data.rs  id.rs  mod.rs  table.rs  tables.rs
crates/vc_ecs/src/storage/utils/: abort_on_drop.rs  blob_array.rs  column.rs  mod.rs  thin_array.rs  vec_extension.rs
crates/vc_ecs/src/system/: access.rs  error.rs  filter.rs  flag.rs  function.rs  input.rs  into.rs  meta.rs  mod.rs  name.rs  param.rs  state.rs  system.rs
crates/vc_ecs/src/system/access/: data.rs  filter.rs  mod.rs  table.rs
crates/vc_ecs/src/system/param/: local.rs  main_thread.rs  marker.rs  mod.rs  resource.rs  tuples.rs  world.rs
crates/vc_ecs/src/utils/: cloner.rs  debug_location.rs  debug_name.rs  dropper.rs  mod.rs
crates/vc_ecs/src/world/: deferred.rs  error.rs  ident.rs  impls.rs  mod.rs  world.rs  world_cell.rs
crates/vc_ecs/src/world/access/: access_table.rs  component.rs  entity.rs  entity_mut.rs  entity_ref.rs  entity_world.rs  fetch_component.rs  get_component.rs  insert.rs  mod.rs  remove.rs  unsafe_world.rs  world_cell.rs
crates/vc_ecs/src/world/entity_access/: mod.rs
crates/vc_ecs/src/world/impls/: despawn.rs  insert.rs  mod.rs  (+2 more)
crates/vc_macro_utils/: Cargo.toml
crates/vc_macro_utils/src/: full_path.rs  lib.rs  manifest.rs
crates/vc_os/: Cargo.toml  README.md
crates/vc_os/src/: lib.rs
crates/vc_os/src/sync/: atomic.rs  mod.rs  sync_cell.rs  sync_unsafe_cell.rs
crates/vc_os/src/thread/: mod.rs
crates/vc_os/src/time/: __fallback.rs  mod.rs
crates/vc_os/src/utils/: array_queue.rs  backoff.rs  cache_paded.rs  futex.rs  list_queue.rs  mod.rs  once_flag.rs  parallel.rs  spin_lock.rs
crates/vc_reflect/: Cargo.toml  README.md
crates/vc_reflect/derive/: Cargo.toml
crates/vc_reflect/derive/src/: lib.rs
crates/vc_reflect/src/: __macro_exports.rs  lib.rs
crates/vc_reflect/src/access/: accessor.rs  mod.rs  path.rs  path_access.rs  string_parser.rs
crates/vc_reflect/src/impls/: cell.rs  mod.rs
crates/vc_reflect/src/info/: array_info.rs  attributes.rs  const_param_data.rs  docs_macro.rs  enum_info.rs  field_info.rs  generics.rs  list_info.rs  map_info.rs  mod.rs  opaque_info.rs  set_info.rs  struct_info.rs  tuple_info.rs  tuple_struct_info.rs  type_info.rs  type_path.rs  typed.rs  variant_info.rs
crates/vc_reflect/src/ops/: apply_error.rs  array_ops.rs  clone_error.rs  enum_ops.rs  kind.rs  list_ops.rs  map_ops.rs  mod.rs  set_ops.rs  struct_ops.rs  tuple_ops.rs  tuple_struct_ops.rs  variant_ops.rs
crates/vc_reflect/src/reflection/: from_reflect.rs  mod.rs  reflect.rs
crates/vc_reflect/src/registry/: from_type.rs  mod.rs  type_meta.rs  type_registry.rs  type_trait.rs
crates/vc_reflect/src/serde/: info_stack.rs  mod.rs  skip_field.rs
crates/vc_task/: Cargo.toml  README.md
crates/vc_task/src/: cond_send.rs  futures.rs  lib.rs  macro_utils.rs  mini_executor.rs  slice.rs
crates/vc_task/src/iter/: adapters.rs  mod.rs
crates/vc_task/src/platform/: local_executor.rs  mod.rs
crates/vc_utils/: Cargo.toml  README.md
crates/vc_utils/src/: cold_path.rs  default.rs  lib.rs  num.rs  range_invoke.rs  typeid_map.rs  vec.rs
crates/vc_utils/src/collections/: array_deque.rs  block_list.rs  mod.rs
crates/vc_utils/src/extra/: array_deque.rs  block_list.rs  bloom_filter.rs  mod.rs  page_pool.rs  typeid_map.rs
crates/vc_utils/src/hash/: hash_map.rs  hash_set.rs  hash_table.rs  hasher.rs  mod.rs  pre_hashed.rs
crates/vc_utils/src/index/: mod.rs
crates/vc_utils/src/num/: mod.rs
crates/vc_utils/src/vec/: array.rs  fast.rs  mod.rs  small.rs  utils.rs
(+205 files in other folders)
