[workspace]
resolver = "3"
members = [ "crates/*" ]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VoidCraft-Engine/vc-core"

[package]
name = "vc_core"
exclude = [".github"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ "std", "debug", "auto_register" ]

# Open some documents for inactive codes.
docsrs_dev = [
    "vc_os/docsrs_dev"
]

# Even if turned on, it only takes effect in Debug mode.
debug = [
    "std",
    "vc_reflect/debug",
    "vc_ecs/debug",
]


std = [
    "vc_os/std",
    "vc_reflect/std",
    "vc_task/std",
    "vc_ecs/std",
]

web = [
    "vc_os/web",
    "vc_task/web",
]

auto_register = [ "vc_reflect/auto_register" ]

reflect_docs = [ "vc_reflect/reflect_docs" ]

async_io = [ "vc_task/async_io" ]


[dependencies]
vc_cfg = { path = "./crates/vc_cfg" }
vc_ptr = { path = "./crates/vc_ptr" }
vc_utils = { path = "./crates/vc_utils" }

vc_os = { path = "./crates/vc_os", default-features = false }
vc_reflect = { path = "./crates/vc_reflect", default-features = false }
vc_task = { path = "./crates/vc_task", default-features = false }
vc_ecs = { path = "./crates/vc_ecs", default-features = false }

[workspace.lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

type_complexity = "allow"
too_many_arguments = "allow"
new_without_default = "allow"
module_inception = "allow"
len_without_is_empty = "allow"

type_id_on_box = "deny"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

