[package]
name = "vc_cfg"
version = "0.0.1" # Fixed preview version.
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

