[package]
name = "vc_ecs"
version = "0.0.1" # Fixed preview version.
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ "std", "debug" ]

std = [
    "vc_os/std",
    "vc_task/std",
    "vc_reflect/std",
]

debug = []


[dependencies]
vc_ptr = { path = "../vc_ptr" }
vc_cfg = { path = "../vc_cfg" }
vc_utils = { path = "../vc_utils" }

vc_os = { path = "../vc_os", default-features = false }
vc_task = { path = "../vc_task", default-features = false }
vc_reflect = { path = "../vc_reflect", default-features = false }

# -------------------- External  --------------------

thiserror = { version = "2", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
bitflags = { version = "2.10", default-features = false }
fixedbitset = { version = "0.5", default-features = false }
log = { version = "0.4", default-features = false }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
