[package]
name = "vc_macro_utils"
version = "0.0.1" # Fixed preview version.
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
syn = "2.0"
# quote = "1.0"
# proc-macro2 = "1.0"
toml_edit = { version = "0.23", default-features = false, features = [ "parse" ] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
