[package]
name = "vc_os"
version = "0.0.1" # Fixed preview version.
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]

std = [
  "wasm-bindgen-futures?/std",
  "js-sys?/std",
  "wasm-bindgen?/std",
  "portable-atomic/std",
]

web = [
  "std",
  "dep:web-time",
  "dep:wasm-bindgen-futures",
  "dep:js-sys",
  "dep:wasm-bindgen",
]

# Open documents for inactive codes.
docsrs_dev = []

[dependencies]

vc_cfg = { path = "../vc_cfg" }

# Note that crossbeam_queue requires atomic pointers, which is the same as this crate.

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = { version = "1.1", default-features = false, optional = true }
wasm-bindgen-futures = { version = "0.4", default-features = false, optional = true }
js-sys = { version = "0.3", default-features = false, optional = true }
wasm-bindgen = { version = "0.2", default-features = false, optional = true }

[target.'cfg(not(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64")))'.dependencies]
portable-atomic = { version = "1", default-features = false, features = [ "fallback" ] }

# We currently do not support platforms without atomic pointers.

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
