[package]
name = "vc_reflect"
version = "0.0.1" # Fixed preview version.
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ "std", "auto_register", "debug" ]

# Even if turned on, it only takes effect in Debug mode.
debug = [ "std" ]

std = [
    "vc_os/std",
    "serde_core/std",
    "erased-serde/std",
]

reflect_docs = [ "vc_reflect_derive/reflect_docs" ]

auto_register = [ "dep:inventory", "vc_reflect_derive/auto_register" ]

[dependencies]
vc_ptr = { path = "../vc_ptr" }
vc_cfg = { path = "../vc_cfg" }
vc_utils = { path = "../vc_utils" }

vc_reflect_derive = { path = "derive" }

vc_os = { path = "../vc_os", default-features = false }

# auto_register
inventory = { version = "0.3", optional = true }

# reflect serde
serde_core = { version = "1", default-features = false, features = ["alloc"] }
erased-serde = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
ron = "0.12"
serde_json = "1"
serde = { version = "1", features = ["derive"] }


[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
