[package]
name = "vc_utils"
version = "0.0.1" # Fixed preview version.
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]

rayon = ["dep:rayon", "hashbrown/rayon"]

[dependencies]
vc_cfg = { path = "../vc_cfg" }

serde_core = { version = "1", default-features = false, features = ["alloc"] }
fastvec ={ version = "1", default-features = false, features = ["serde"] }

# Hash Container
foldhash = { version = "0.2.0", default-features = false }
hashbrown = { version = "0.16.1", features = [
  "equivalent",
  "raw-entry",
  "serde",
], default-features = false }

rayon = { version = "1", default-features = false, optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
