[package]
name = "vc_utils"
version = "0.0.1" # Fixed preview version.
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vc_cfg = { path = "../vc_cfg" }

# -------------------- External  --------------------

serde_core = { version = "1", default-features = false, features = ["alloc"] }

fastvec ={ version = "1.1", default-features = false, features = ["serde"] }

indexmap = { version = "2.13", default-features = false, features = ["serde"] }

foldhash = { version = "0.2.0", default-features = false }
hashbrown = { version = "0.16.1", features = [
  "equivalent",
  "raw-entry",
  "serde",
], default-features = false }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
